amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.2-beta3:
  FIX: RAND and REP buttons were always enabled at startup. (BR 95861)
  ADD: Implemented "Append Suggestions" functionality. It means that when
       enabled, amaroK will append a couple of suggested songs to playlist
       when you play a track. This produces a continuous playlist, something
       similar to listening to radio.
  ADD: Implemented "Play Media..." functionality.
  FIX: Playlist-Browser was appending to playlist when clicking "Load".
       Now it replaces the current playlist again, as intended.
  ADD: Profile for KDELIRC (Remote Controls). Patch by Dirk Ziegelmeier
       <dziegel@gmx.de>.
  ADD: Remove Duplicates now also removes dead entries from playlist.
  FIX: Accept album-dragging from the ContextBrowser. (BR 86020)
  FIX: Configure check was missing for the Konqueror Sidebar
       (depends on KDE-Base).
  FIX: Browser splitter was drawn incorrectly with some styles. (BR 95333)
  ADD: DCOP call for relative seek. Patch by Andreas Pfaller. (BR 84989)
  CHG: Bumped TagLib dependency to 1.3.1. (1.3 is too damn buggy)
  FIX: CTRL-M can show the menubar again after hiding. (BR 94139)
  ADD: Support for last.fm streams.
  FIX: amaroK icon shows correctly in window decoration under GNOME.
  ADD: Support for ID3v2 cover images. (Thanks to M. Thiesen!) (BR 88492)
  ADD: DCOP calls for the status of Random Mode, Repeat Playlist and
       Repeat Track.
  ADD: DCOP call to return the sample rate.
  ADD: DCOP call to return the track number. (BR 94825)
  FIX: GStreamer-engine provides better scope synchronisation.
  ADD: Save current track position and play queue on exit. (BR 90379)
  FIX: Fix Directory column on playlist, show absolute directory path
       instead of empty string. (BR 90361)
  ADD: DCOP call to scan your collection. (BR 84621)
  FIX: When an engine fails to load, respect the rank while choosing
       the next engine.

VERSION 1.2-beta2: