@@ -4,6 +4,8 @@ amaroK ChangeLog
 
 
 VERSION 1.2-beta3:
+  ADD: Context-Browser now caches the tab widgets. Patch from Matias
+       Costa <mcc3@alu.um.es>. (BR 95999)
   FIX: RAND and REP buttons were always enabled at startup. (BR 95861)
   ADD: Implemented "Append Suggestions" functionality. It means that when
        enabled, amaroK will append a couple of suggested songs to playlist
